--- a/blog/src/style.css
+++ b/blog/src/style.css
@@ -65,6 +65,16 @@
 
 /* HTML elements */
 
+.visually-hidden {
+  clip: rect(0 0 0 0);
+  clip-path: inset(50%);
+  height: 1px;
+  overflow: hidden;
+  position: absolute;
+  white-space: nowrap;
+  width: 1px;
+}
+
 *,
 :after,
 :before {
